  an old transaction release around we dropped support for transaction < 2.4.0.

  If you have a good reason why we should support an old transaction release
  with the latest more.transaction, let us know - it could be done, though
  there should be tests verifying multiple transaction releases against
  more.transaction.

  See https://github.com/zopefoundation/transaction/pull/68

0.8 (2016-12-28)
================

- Fixes incompatibility with latest transaction release in combination with
  Python 2.7. See https://github.com/morepath/more.transaction/issues/8

- Add Python 3.5 and make it the default test environment.

- Clean up meta data.

- Fix `#6`_: ``userid`` not taken properly.

.. _#6: https://github.com/morepath/more.transaction/issues/6


0.7 (2016-07-18)
================

- Use a new ``request.reset`` API introduced by Morepath 0.15 to reset
  the request so that a transaction can be properly
  retried. Previously ``more.transaction`` was using internal Morepath
  APIs to reset the request, which failed after a change in Morepath
  0.15.

- Discovered a bug: request resetting wasn't working properly with
  mounted applications. This is fixed in Morepath's new
  ``request.reset`` method, which we now use.

- Replaced custom exception re-raise machinery with a ``raise``
  statement with no arguments.  That was legacy code from
  ``pyramid_tm`` when they were using a context manager instead of a
  ``try...except`` statement.

  See https://github.com/morepath/more.transaction/issues/7

- Update test suite to take advantage of Morepath 0.15.

- Remove Python 2.5 syntax.

0.6 (2016-04-06)
================

- Adds compatibility with Morepath 0.13.

0.5 (2015-08-17)
================

- Fixes transaction retries not working for paths with more than one variable.

  This bug had no effect on applications using the default more.transaction
  settings. The bug only concerned applications using an ``attempts`` setting
  greater than 1.
