@@ -1,18 +1,27 @@
 language: python
 
-python: 3.5
-env:
-    - TOXENV=py27
-    - TOXENV=pypy
-    - TOXENV=py33
-    - TOXENV=py34
-    - TOXENV=py35
-    - TOXENV=pep8
-    - TOXENV=coverage
+python: 3.8
+
+cache: pip
+
+matrix:
+    include:
+        - python: "3.6"
+          env: TOXENV=py36
+        - python: "3.7"
+          env: TOXENV=py37
+        - python: "3.8"
+          env: TOXENV=py38
+        - python: "3.8"
+          env: TOXENV=pep8
+        - python: "3.8"
+          env: TOXENV=coverage
+before_install:
+    - pip install --upgrade pip setuptools
 install:
     - pip install tox
-    - if [ "$TOXENV" = 'py34' ]; then pip install coveralls; fi
+    - if [ "$TOXENV" = 'coverage' ]; then pip install coveralls; fi
 script:
     - tox -e $TOXENV
 after_success:
-    - if [ "$TOXENV" = 'py34' ]; then coveralls; fi
+    - if [ "$TOXENV" = 'coverage' ]; then coveralls; fi
