@@ -26,10 +26,9 @@ setup(
         'Environment :: Web Environment',
         'Topic :: Software Development :: Libraries :: Application Frameworks',
         'Topic :: Internet :: WWW/HTTP :: WSGI',
-        'Programming Language :: Python :: 2.7',
-        'Programming Language :: Python :: 3.3',
-        'Programming Language :: Python :: 3.4',
-        'Programming Language :: Python :: 3.5',
+        'Programming Language :: Python :: 3.6',
+        'Programming Language :: Python :: 3.7',
+        'Programming Language :: Python :: 3.8',
         'Programming Language :: Python :: Implementation :: PyPy',
         'Development Status :: 5 - Production/Stable'
     ],
@@ -43,6 +42,8 @@ setup(
             'coverage',
             'pytest >= 2.6.0',
             'pytest-cov',
-            'webtest'
+            'webtest',
+            'tox'
         ],
-    ))
+    )
+)
