@@ -1,22 +1,23 @@
 [tox]
-envlist = py27,pypy,py33,py34,py35,pep8,coverage
+envlist = pypy3,py36,py37,py38,pep8,coverage
 
 [testenv]
 deps = -e{toxinidir}[test]
-commands = py.test -v {posargs}
+commands = pytest -v {posargs}
 
 [testenv:pep8]
-basepython = python3.5
+basepython = python3.8
 deps = {[testenv]deps}
        flake8
+       pep8
 
 commands = flake8 more setup.py
 
 [testenv:coverage]
-basepython = python3.5
+basepython = python3.8
 deps = {[testenv]deps}
 commands =
-    coverage run --source more.transaction -m py.test {posargs}
+    coverage run --source more.transaction -m pytest {posargs}
     coverage report -m
 
 [pytest]
