@@ -17,6 +17,8 @@ CHANGES
 
   See https://github.com/zopefoundation/transaction/pull/68
 
+- Make Python 3.6 the minimal version
+
 0.8 (2016-12-28)
 ================
 
